src/scss/critical.scss
@use "fonts";
@use "reset";
@use "variables";
@use "utilities";
@use "sass:map";

// Global Styles
body {
  font-family: "Lexend Deca", sans-serif;
  font-size: 15px;
  font-weight: 400;
  line-height: 1.6;

  background-color: map.get(variables.$colors, "white");
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Space Mono", sans-serif;
  line-height: 1;
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  cursor: pointer;
}

header {
  .navbar {
    padding: 2rem 0;
    display: flex;
    align-items: center;

    position: relative;
  }

  .nav-toggle {
    position: absolute;
    left: 0;

    background: none;
    border: none;
  }

  .logo {
    margin: 0 auto;
  }

  .nav__list {
    display: flex;
    gap: 2rem;
  }

  .nav__item {
    font-family: "Space Mono", sans-serif;
  }

  .cta {
    margin-left: auto;
  }

  .main-nav {
    visibility: hidden;
    height: 0;
    position: absolute;
  }

  .main-nav.visible {
    visibility: visible;
    height: auto;
    position: absolute;
  }

  .cta {
    visibility: hidden;
    height: 0;
    position: absolute;
  }
}

.hero {
  text-align: center;
  place-content: center;
  color: map.get(variables.$colors, "white");
  background-image: url("/assets/images/home-hero-mobile.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 40.625rem;

  h1 {
    font-size: clamp(2.5rem, 2.1479rem + 1.5023vw, 3.5rem);
    letter-spacing: -1.79px;
  }

  .arrow {
    position: absolute;
    left: -100%;
    top: 100%;
  }

  .circles {
    visibility: hidden;
    height: 0;
    position: absolute;
  }
}

@media (min-width: 48rem) {
  header {
    .nav-toggle {
      visibility: hidden;
      height: 0;
      position: absolute;
    }

    .main-nav {
      visibility: visible;
      height: auto;
      position: relative;
    }

    .cta {
      visibility: visible;
      height: auto;
      position: relative;
    }

    .logo {
      margin-left: 0;
      margin-right: 3.625rem;
    }
  }

  .hero {
    background-image: url("/assets/images/home-hero-tablet.jpg");

    .arrow {
      left: -10%;
      top: 120%;
    }

    .circles {
      visibility: visible;
      height: auto;
      top: 160%;
      right: -10%;
    }
  }
}

